Nicer lab styles

--- a/lib/ionic/assets/preview.html
+++ b/lib/ionic/assets/preview.html
@@ -45,7 +45,8 @@
         opacity: 1;
       }
       h2 a {
-        color: #222;
+        font-size: 18px;
+        color: #6F7582;
         text-decoration: none;
       }
       .phone {
@@ -53,8 +54,9 @@
         margin: 20px;
       }
       .frame {
-        border: 6px solid #121316;
+        border: 1px solid transparent;
         border-radius: 3px;
+        box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
       }
       #iphone-frame {
         top: 109px;
