Fix Android name

--- a/lib/ionic/assets/preview.html
+++ b/lib/ionic/assets/preview.html
@@ -171,7 +171,7 @@
       </div>
       <div class="phone">
         <div id="android">
-          <h2><a href="/?ionicplatform=android" target="_blank">An22droid</a></h2>
+          <h2><a href="/?ionicplatform=android" target="_blank">Android</a></h2>
           <iframe id="android-frame" src="/?ionicplatform=android" class="frame"></iframe>
         </div>
       </div>
