--- a/packages/@ionic/lab/src/stencil/index.html
+++ b/packages/@ionic/lab/src/stencil/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>Ionic Lab</title>
 
+  <base target="_blank" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <meta name="theme-color" content="#16161d">
   <meta name="apple-mobile-web-app-capable" content="yes">
