feat(lab): SSL support

--- a/packages/@ionic/lab/src/stencil/index.html
+++ b/packages/@ionic/lab/src/stencil/index.html
@@ -9,7 +9,7 @@
   <script src="/build/ionlab.js"></script>
 
   <link rel="icon" type="image/png" href="/assets/favicon.png">
-  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 </head>
 <body>
 
