refactor(lab): update stencil, use css not scss

--- a/packages/@ionic/lab/src/stencil/index.html
+++ b/packages/@ionic/lab/src/stencil/index.html
@@ -10,6 +10,10 @@
 
   <link rel="icon" type="image/png" href="/assets/favicon.png">
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="/assets/variables.css">
+  <link rel="stylesheet" href="/assets/fonts.css">
+  <link rel="stylesheet" href="/assets/reboot.css">
+  <link rel="stylesheet" href="/assets/app.css">
 </head>
 <body>
 
