--- a/packages/@ionic/lab/src/stencil/index.html
+++ b/packages/@ionic/lab/src/stencil/index.html
@@ -6,7 +6,7 @@
 
   <base target="_blank" />
 
-  <script src="/build/ionlab.js"></script>
+  <script src="/build/app.js"></script>
 
   <link rel="icon" type="image/png" href="/assets/favicon.png">
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
